Add material ingredient type to JEI